[package]
name = "dist_shell"
version = "0.1.0"
authors = ["hanuskretthansen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dist_host"
path = "src/dist_host/bin/main.rs"

[[bin]]
name = "local_host"
path = "src/local_host/bin/main.rs"

[dependencies]


